# llm-council

./: .env.example  .gitignore  MANIFEST.in  README.md  analyze_mmlu_pro_structured_outputs.ipynb  council_session_test.ipynb  explore_mmlu_pro.ipynb  explore_mmlu_pro_ablate_temperature.ipynb  mmlu_prompts.py  pyproject.toml  requirements.txt  sample_api.py  setup.py
.github/workflows/: test.yml
analysis/: all_ablation_data.pkl  analyze_pairwise_ratings.ipynb  comparison_to_other_leaderboards.ipynb  council_api.ipynb  explore_chatbot_arena.ipynb  human_agreement.ipynb  jury_ablation.ipynb  jury_ablation_sample_with_replacement.ipynb  phylo_trees.ipynb  run_jury_ablation.py  self_grading_ablation.ipynb
analysis/lmc_api_example_data/: completions.jsonl  eval_config.json  judge_ratings.jsonl  models.json
analysis/phylo_trees/: ngram_metrics.json
analysis/sample_council/pairwise/: completions.jsonl  eval_config.json  judge_ratings.jsonl  models.json  user_prompts.json
analysis/sample_council/rubric/: completions.jsonl  eval_config.json  judge_ratings.jsonl
data/: emobench_ea.jsonl
data/chatbotarena_eq_subset/completions/: consolidated_responses.jsonl  responses_for_inspection.csv
data/chatbotarena_eq_subset/judging/: responses_for_inspection.csv
llm_council/: consolidate_council_responses.py  constants.py  council.py  generate_completion_requests.py  generate_judging_requests.py  prompts.py  structured_outputs.py
llm_council/analysis/: visualization.py
llm_council/invocation/: execute_council.py  issue_single_prompt.py  rerun_bad_responses.py
llm_council/judging/: __init__.py  config.py  prompt_builder.py  schema.py
llm_council/members/: alibaba.yaml  anthropic.yaml  cohere.yaml  databricks.yaml  google.yaml  llm_hub.py  membership.py  meta.yaml  mistral.yaml  openai.yaml  schema.py
llm_council/processors/: any_processor.py  council_service.py  generic_processor.py  services.py
llm_council/providers/: __init__.py  anthropic_provider.py  base_provider.py  cerebras_provider.py  cohere_provider.py  lepton_provider.py  mistral_provider.py  openai_provider.py  together_provider.py  utils.py  vertex_provider.py
llm_council/sessions/: council_session.py
llm_council/topologies/: __init__.py  base_topology.py  council.py
llm_council/utils/: jsonl_io.py
lm_council/: __init__.py  constants.py  council.py  prompts.py  structured_outputs.py
lm_council/analysis/: visualization.py
lm_council/judging/: __init__.py  config.py  prompt_builder.py
scripts/: update_example_council_run.py
tests/llm_council/: test_council.py  test_council_analysis.py
tests/lm_council/: test_council.py  test_council_analysis.py
tests/scripts/: test_council.py  test_session.py
tests/testdata/: lmc_ei.jsonl
(+1260 files in other folders)
