[tool.poetry]
name = "llm-council"
version = "0.1.0"
description = ""
authors = ["Justin Zhao <justinxzhao@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
anthropic = "^0.45.2"
hypothesis-jsonschema = "^0.23.1"
openai = "^1.63.0"
datasets = "^3.3.1"
choix = "^0.3.6"
seaborn = "^0.13.2"
scikit-learn = "^1.6.1"
jsonlines = "^4.0.0"
tiktoken = "^0.9.0"
instructor = "^1.7.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
