[tool.poetry]
name = "llm-council"
version = "0.1.0"
description = ""
authors = ["Justin Zhao <justinxzhao@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
hypothesis-jsonschema = "^0.23.1"
openai = "^1.63.0"
datasets = "^3.3.1"
choix = "^0.3.6"
seaborn = "^0.13.2"
scikit-learn = "^1.6.1"
jsonlines = "^4.0.0"
tiktoken = "^0.9.0"
python-dotenv = "^1.0.1"
wordfreq = "^3.1.1"
nltk = "^3.9.1"
ete3 = {extras = ["visualization"], version = "^3.1.3"}
pyqt5 = "^5.15.11"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
